// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with props 1`] = `
<div>
  <div
    className="one-whole"
  />
  <div
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="listbox"
    style={
      Object {
        "overflowX": "hidden",
      }
    }
  >
    <div
      style={
        Object {
          "WebkitTransform": "translate(0%, 0)",
          "display": "flex",
          "flexDirection": "row",
          "height": 0,
          "transform": "translate(0%, 0)",
          "willChange": "transform",
        }
      }
    >
      <div
        aria-hidden={false}
        className={undefined}
        role="option"
        style={
          Object {
            "flexShrink": 0,
            "overflow": "auto",
            "overflowY": "hidden",
            "width": "100%",
          }
        }
      >
        <div
          className="one-whole"
        />
      </div>
      <div
        aria-hidden={true}
        className={undefined}
        role="option"
        style={
          Object {
            "flexShrink": 0,
            "overflow": "auto",
            "overflowY": "hidden",
            "width": "100%",
          }
        }
      >
        <div
          className="one-whole"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`test renders with props 1`] = `
<div>
  <div
    className="one-whole" />
  <div
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="listbox"
    style={
      Object {
        "overflowX": "hidden",
      }
    }>
    <div
      style={
        Object {
          "WebkitTransform": "translate(0%, 0)",
          "display": "flex",
          "flexDirection": "row",
          "height": 0,
          "transform": "translate(0%, 0)",
          "willChange": "transform",
        }
      }>
      <div
        aria-hidden={false}
        className={undefined}
        role="option"
        style={
          Object {
            "flexShrink": 0,
            "overflow": "auto",
            "overflowY": "hidden",
            "width": "100%",
          }
        }>
        <div
          className="one-whole" />
      </div>
      <div
        aria-hidden={true}
        className={undefined}
        role="option"
        style={
          Object {
            "flexShrink": 0,
            "overflow": "auto",
            "overflowY": "hidden",
            "width": "100%",
          }
        }>
        <div
          className="one-whole" />
      </div>
    </div>
  </div>
</div>
`;
